--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
